niciado frontend web para acesso às funções SAT
Toda a infraestrutura básica do frontend está implementada, incluindo login,
e acesso a algumas funções: ConsultarSAT, ConsultarStatusOperacional e
ExtrairLogs.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask == 0.10.1
+Flask-Login == 0.3.0
 Flask-RESTful == 0.3.3
+Flask-WTF == 0.12
 Unidecode == 0.04.18
 satcomum >= 0.0.4
 satcfe >= 0.0.2
