Mudança de versão para 0.3

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Flask-Login == 0.3.0
 Flask-RESTful == 0.3.3
 Flask-WTF == 0.12
 Unidecode == 0.04.18
-satcomum >= 0.0.4
-satcfe >= 0.0.2
+satcomum >= 0.0.4, <= 0.0.9
+satcfe >= 0.0.2, <= 0.0.7
